fix: reduce categories title font size on mobile

--- a/src/assets/styles/pages/solution/_solution_categories.scss
+++ b/src/assets/styles/pages/solution/_solution_categories.scss
@@ -7,6 +7,11 @@
         margin-bottom: 3.2rem;
         font-family: "Wix Madefor Display", sans-serif;
         font-size: 4rem;
+
+        @media (width < $bp-tablet) {
+            font-size: 3.2rem;
+        }
+
         font-weight: 800;
         line-height: 1.2;
         color: #070216;
